<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bodydata_dialog_take_photo"
        android:text="@string/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?selectableItemBackground"
        style="@style/MyAppTheme.Button.White"/>
    <Button
        android:id="@+id/bodydata_dialog_choose_photo"
        android:text="@string/choose_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        style="@style/MyAppTheme.Button.White"/>

    <Button
        android:id="@+id/bodydata_dialog_cancel_photo"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/cancel_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        style="@style/MyAppTheme.Button.White"/>

</LinearLayout>