<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bodydataBabyHeight"
                    android:hint="@string/baby_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bodydataBabyWeight"
                    android:hint="@string/baby_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body_data_img_label"/>
            <android.support.v7.widget.CardView
                android:id="@+id/bodydataBabyImgContainer"
                android:layout_marginTop="4dp"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp">
                <ImageView
                    android:id="@+id/bodydataBabyImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/body_data_baby_img" />
            </android.support.v7.widget.CardView>

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>

            <TextView
                android:id="@+id/bodydataTime"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:padding="4dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/corner_btn_bg_light_gray"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:id="@+id/bodydataFab"
        android:text="@string/sure_to_add"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="center_horizontal|bottom"
        android:transitionName="@string/fab_shared_name"
        android:elevation="8dp"
        android:background="@drawable/circle_btn_bg_light_orange"/>

</android.support.design.widget.CoordinatorLayout>