<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/excretion_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/AppTheme.ActionBarOverlay"
            app:popupTheme="@style/AppTheme.PopupMenuOverlay"/>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excretion_type"/>

            <RadioGroup
                android:id="@+id/excretionTypeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/wetType"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/wetExcretion"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/driedType"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/driedExcretion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_marginStart="40dp"/>

                <RadioButton
                    android:id="@+id/wetAndDriedType"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/wetAndDriedExcretion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"/>
            </RadioGroup>

            <TextView
                android:id="@+id/driedColorLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excretion_color"/>
            <com.cuile.cuile.babytime.view.ExcretionColorView
                android:id="@+id/excretionColorView"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/wetColorLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/excretionWetColor"/>


            <LinearLayout
                android:id="@+id/wetColorLayout"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/wetColorSeekBar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/colorPrimaryDark"
                    android:progressBackgroundTint="@android:color/transparent"
                    android:secondaryProgressTint="@android:color/transparent"
                    android:background="@drawable/wet_excretion_color_seek_bg"/>
                <TextView
                    android:text="@string/dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_much_excretion"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/excretionWetHowMany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:entries="@array/wet_how_many"
                    android:spinnerMode="dropdown"/>


                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/excretionDryHowMany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:entries="@array/dry_how_many"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <TextView
                android:id="@+id/excretionDryHowHardLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_dried"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/excretionDryHowHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:entries="@array/excretion_how_dried"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">
                <com.cuile.cuile.babytime.view.DateSelectTextView
                    android:id="@+id/excretionDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:mode="date"/>
                <com.cuile.cuile.babytime.view.DateSelectTextView
                    android:id="@+id/excretionTimeTV"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:mode="time"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/excretionFab"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:elevation="8dp"
        app:pressedTranslationZ="12dp"
        android:layout_margin="@dimen/fab_margin"
        android:transitionName="@string/fab_shared_name"
        android:backgroundTint="@android:color/holo_orange_light"
        android:src="@android:drawable/ic_menu_save"/>
</android.support.design.widget.CoordinatorLayout>