<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/eat_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/AppTheme.ActionBarOverlay"
            app:popupTheme="@style/AppTheme.PopupMenuOverlay"/>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_marginTop="?actionBarSize"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin"
            android:orientation="vertical">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/which_to_eat"/>

            <RadioGroup
                android:id="@+id/milkTypeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/eatBreast"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/breast_milk"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/eatDried"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/dried_milk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"/>

                <RadioButton
                    android:id="@+id/eatOther"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/other_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"/>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/otherFoodLayout"
                android:visibility="gone"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/otherFoodTV"
                    android:hint="@string/type_of_other_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_many_to_eat"/>

            <LinearLayout
                android:id="@+id/eatMlLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <NumberPicker
                        android:id="@+id/eatmlNP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="毫升"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_long"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/eatDriedDurationImgBtn"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/circle_btn_bg_light_green"
                        android:elevation="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:src="@android:drawable/ic_media_play" />
                    <com.cuile.cuile.babytime.view.TimerTextView
                        android:id="@+id/eatDriedDurationTV"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/layout_eat_mother_milk"
                android:id="@+id/eatMotherMilkLayout"/>

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">
                <com.cuile.cuile.babytime.view.DateSelectTextView
                    android:id="@+id/eatDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:mode="date"/>
                <com.cuile.cuile.babytime.view.DateSelectTextView
                    android:id="@+id/eatTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:mode="time"/>
            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/eatDataFab"
        android:text="@string/sure_to_add"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="center_horizontal|bottom"
        android:transitionName="@string/fab_shared_name"
        android:elevation="8dp"
        android:background="@drawable/circle_btn_bg_light_orange"/>

</android.support.design.widget.CoordinatorLayout>