<?xml version="1.0" encoding="utf-8"?>
<com.cuile.cuile.babytime.view.FabMenuFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fabMenuBgFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/fabMenuToBodyDataLabel"
        android:text="@string/body_data"
        android:background="@color/material_scrim_color"
        android:textColor="@android:color/white"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="306dp"
        android:layout_gravity="bottom|end"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabMenuToBodyData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_fab_margin"
        android:layout_marginBottom="296dp"
        android:layout_gravity="bottom|end"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"
        android:clickable="false"
        android:focusable="false"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="mini"
        app:pressedTranslationZ="12dp"
        app:elevation="8dp" />

    <TextView
        android:id="@+id/fabMenuToEatDataLabel"
        android:text="@string/eat_data"
        android:background="@color/material_scrim_color"
        android:textColor="@android:color/white"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="242dp"
        android:layout_gravity="bottom|end"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabMenuToEatData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_fab_margin"
        android:layout_marginBottom="232dp"
        android:src="@drawable/ic_add_white_24dp"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"
        android:clickable="false"
        android:focusable="false"
        app:fabSize="mini"
        app:pressedTranslationZ="12dp"
        app:elevation="8dp"
        android:layout_gravity="bottom|end" />

    <TextView
        android:id="@+id/fabMenuToExcretionDataLabel"
        android:text="@string/excretion_data"
        android:background="@color/material_scrim_color"
        android:textColor="@android:color/white"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="178dp"
        android:layout_gravity="bottom|end"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabMenuToExcretionData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_fab_margin"
        android:layout_marginBottom="168dp"
        android:src="@drawable/ic_add_white_24dp"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"
        android:clickable="false"
        android:focusable="false"
        app:fabSize="mini"
        app:pressedTranslationZ="12dp"
        app:elevation="8dp"
        android:layout_gravity="bottom|end" />

    <TextView
        android:id="@+id/fabMenuToSleepDataLabel"
        android:text="@string/sleep_data"
        android:background="@color/material_scrim_color"
        android:textColor="@android:color/white"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="114dp"
        android:layout_gravity="bottom|end"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabMenuToSleepData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_fab_margin"
        android:layout_marginBottom="104dp"
        android:src="@drawable/ic_add_white_24dp"
        android:scaleX="0.0"
        android:scaleY="0.0"
        android:alpha="0.0"
        android:clickable="false"
        android:focusable="false"
        app:fabSize="mini"
        app:pressedTranslationZ="12dp"
        app:elevation="8dp"
        android:layout_gravity="bottom|end" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/mainshowFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:transitionName="@string/fab_shared_name"
        app:pressedTranslationZ="12dp"
        app:elevation="8dp"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_gravity="bottom|end" />

</com.cuile.cuile.babytime.view.FabMenuFrameLayout>